; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/ssl/statem/extr_extensions_clnt.c_tls_construct_ctos_ems.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/ssl/statem/extr_extensions_clnt.c_tls_construct_ctos_ems.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TLSEXT_TYPE_extended_master_secret = common dso_local global i32 0, align 4
@SSL_AD_INTERNAL_ERROR = common dso_local global i32 0, align 4
@SSL_F_TLS_CONSTRUCT_CTOS_EMS = common dso_local global i32 0, align 4
@ERR_R_INTERNAL_ERROR = common dso_local global i32 0, align 4
@EXT_RETURN_FAIL = common dso_local global i32 0, align 4
@EXT_RETURN_SENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tls_construct_ctos_ems(i32* %0, i32* %1, i32 %2, i32* %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i64 %4, i64* %11, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = load i32, i32* @TLSEXT_TYPE_extended_master_secret, align 4
  %14 = call i32 @WPACKET_put_bytes_u16(i32* %12, i32 %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %5
  %17 = load i32*, i32** %8, align 8
  %18 = call i32 @WPACKET_put_bytes_u16(i32* %17, i32 0)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %27, label %20

20:                                               ; preds = %16, %5
  %21 = load i32*, i32** %7, align 8
  %22 = load i32, i32* @SSL_AD_INTERNAL_ERROR, align 4
  %23 = load i32, i32* @SSL_F_TLS_CONSTRUCT_CTOS_EMS, align 4
  %24 = load i32, i32* @ERR_R_INTERNAL_ERROR, align 4
  %25 = call i32 @SSLfatal(i32* %21, i32 %22, i32 %23, i32 %24)
  %26 = load i32, i32* @EXT_RETURN_FAIL, align 4
  store i32 %26, i32* %6, align 4
  br label %29

27:                                               ; preds = %16
  %28 = load i32, i32* @EXT_RETURN_SENT, align 4
  store i32 %28, i32* %6, align 4
  br label %29

29:                                               ; preds = %27, %20
  %30 = load i32, i32* %6, align 4
  ret i32 %30
}

declare dso_local i32 @WPACKET_put_bytes_u16(i32*, i32) #1

declare dso_local i32 @SSLfatal(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
